--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^0.2.4",
